@@ -26,7 +26,9 @@
 
 VPATH = \
     $(JavaScriptCore)/kjs \
+    $(JavaScriptCore)/VM \
     $(JavaScriptCore)/pcre \
+    $(JavaScriptCore)/docs \
 #
 
 .PHONY : all
@@ -40,6 +42,7 @@ all : \
     number_object.lut.h \
     regexp_object.lut.h \
     string_object.lut.h \
+    $(JavaScriptCore)/docs/bytecode.html \
 #
 
 # lookup tables for classes
@@ -63,3 +66,7 @@ grammar.cpp: grammar.y
 
 chartables.c : dftables
 	$^ $@
+
+$(JavaScriptCore)/docs/bytecode.html: make-bytecode-docs.pl Machine.cpp 
+	perl $^ $@
+
